--- a/src/main/resources/static/css/admin/common.css
+++ b/src/main/resources/static/css/admin/common.css
@@ -135,3 +135,33 @@ div.minimalistBlack {
 .divTableBody {
     display: table-row-group;
 }
+
+.submit-btn-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 25px;
+    margin-bottom: 10px;
+}
+
+.submit-btn {
+    display: inline-block;
+    padding: 8px 14px;
+    height: 21.5px;
+    line-height: 21.5px;
+    box-sizing: content-box;
+    color: var(--admin-save-btn-color);
+    background-color: var(--background-color);
+    border: 2px solid var(--admin-save-btn-color);
+    border-radius: 6px;
+    font-weight: 500;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.submit-btn:hover {
+    border: 2px solid var(--admin-save-btn-color);
+    color: #fff;
+    font-weight: 500;
+    background-color: var(--admin-save-btn-color);
+}
