--- a/src/main/resources/templates/admin/profile/profiles.html
+++ b/src/main/resources/templates/admin/profile/profiles.html
@@ -11,8 +11,8 @@
 <div layout:fragment="admin-content">
   <div class="admin-content-header">
     <!-- <h3>현재 저장된 홈 이미지 (1)</h3> -->
-    <a href="/admin/works/save-form" class="admin-content-header-save-btn">저장</a>
-    <a href="/admin/works/delete-form" class="admin-content-header-del-btn">삭제</a>
+    <a href="/admin/profile/save-form" class="admin-content-header-save-btn">저장</a>
+    <a href="/admin/profile/delete-form" class="admin-content-header-del-btn">삭제</a>
     <select name="workDate" class="admin-content-header-select" id="profile-type-select" onchange="sendGetRequest()">
       <option th:selected="All == ${selectedType}" value="All">All</option>
       <option th:each="profileType : ${profileTypes}" th:text="${profileType.type}" th:selected="${profileType.lowerCase} == ${selectedType}" th:value="${profileType.lowerCase}">2018</option>
