--- a/src/main/resources/templates/admin/work/save.html
+++ b/src/main/resources/templates/admin/work/save.html
@@ -4,7 +4,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/admin-default}">
 <head>
-  <link rel="stylesheet" href="/css/admin/work/works-save.css" />
+  <link rel="stylesheet" href="/css/admin/work/save.css" />
   <script src="/js/common.js" defer></script>
 </head>
 <div layout:fragment="admin-content">
