[feat] : HomeImage - update UI 및 기능 재구현

--- a/src/main/resources/static/css/admin/common.css
+++ b/src/main/resources/static/css/admin/common.css
@@ -136,6 +136,15 @@ div.minimalistBlack {
     display: table-row-group;
 }
 
+.divTableHeading .divTableRow .update-btn-header {
+    width: 60px;
+}
+
+.update-btn-wrapper {
+    text-align: center;
+    vertical-align: middle;
+}
+
 .submit-btn-wrapper {
     display: flex;
     justify-content: center;
