--- a/src/main/resources/static/css/admin/navbar.css
+++ b/src/main/resources/static/css/admin/navbar.css
@@ -53,8 +53,28 @@
     cursor: pointer;
 }
 
-.update-btn {
-    font-size: 1vw;
+.delete-page-before-btn {
+    margin: 0px 10px;
+}
+
+@media screen and (max-width: 1140px) {
+    .update-btn {
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 875px) {
+    .update-btn {
+        font-size: 9px;
+        padding: 6px 12px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .update-btn {
+        font-size: 9px;
+        padding: 2px 4px;
+    }
 }
 
 .before-btn:hover,
