--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -8,7 +8,7 @@
             <li class="navbar-menu-works">
                 <a href="">Works</a>
                 <ul class="navbar-dropdown-submenu">
-                    <li><a href="#">All</a></li>
+                    <li><a href="/works">All</a></li>
                     <li class="navbar-dropdown-submenu-separator">|</li>
                     <li><a href="#">2018</a></li>
                     <li><a href="#">2019</a></li>
