--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -70,6 +70,22 @@
     font-size: 24px;
 }
 
+.logout-btn {
+    display: inline-block;
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    font: inherit;
+    color: dodgerblue;
+    text-decoration: none;
+    cursor: pointer;
+    line-height: normal;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
 @media screen and (min-width: 1600px) {
     .navbar {
         margin: 0 auto;
