--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -6,15 +6,17 @@
         </div>
         <ul class="navbar-menu">
             <li class="navbar-menu-works">
-                <a href="/works">Works</a>
+                <a href="/works/all">Works</a>
                 <ul class="navbar-dropdown-submenu">
-                    <li><a href="/works">All</a></li>
+                    <li><a href="/works/all">All</a></li>
                     <li class="navbar-dropdown-submenu-separator">|</li>
-                    <li><a href="#">2018</a></li>
-                    <li><a href="#">2019</a></li>
-                    <li><a href="#">2020</a></li>
-                    <li><a href="#">2021</a></li>
-                    <li><a href="#">2022</a></li>
+                    <li><a href="/works/2018">2018</a></li>
+                    <li><a href="/works/2019">2019</a></li>
+                    <li><a href="/works/2020">2020</a></li>
+                    <li><a href="/works/2021">2021</a></li>
+                    <li><a href="/works/2022">2022</a></li>
+                    <li><a href="/works/2023">2023</a></li>
+                    <li><a href="/works/2024">2024</a></li>
                 </ul>
             </li>
             <li><a href="">Biography</a></li>
