[feat] : Visitor Profile UI 및 Service 구현

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -19,7 +19,7 @@
                     <li><a href="/works/2024">2024</a></li>
                 </ul>
             </li>
-            <li><a href="">Biography</a></li>
+            <li><a href="/profiles">Profile</a></li>
             <li><a href="">Contact</a></li>
             <li sec:authorize="isAuthenticated()"><a href="/admin/home-images" style="color: dodgerblue">Admin</a></li>
             <li sec:authorize="isAuthenticated()">
