[feat] : Visitor profile UI 수정 및 Visitor contact UI 구조 설계

--- a/src/main/resources/static/css/profiles.css
+++ b/src/main/resources/static/css/profiles.css
@@ -24,6 +24,10 @@
     width: 100px;
 }
 
+.nav-profiles {
+    color: var(--accent-color);
+}
+
 @media screen and (max-width: 768px) {
     .profile-list-container {
         margin: 0;
