--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -20,5 +20,5 @@
   <nav th:replace="~{fragments/navbar.html :: navbar}" />
 
   <!-- layout에서 변경되는 영역을 fragment로 설정. -->
-  <div layout:fragment="content"></div>
+  <div layout:fragment="content" class="main-container"></div>
 </body>
