--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -6,7 +6,7 @@
         </div>
         <ul class="navbar-menu">
             <li class="navbar-menu-works">
-                <a href="/works/all">Works</a>
+                <a href="/works/all" class="nav-works">Works</a>
                 <ul class="navbar-dropdown-submenu">
                     <li><a href="/works/all">All</a></li>
                     <li class="navbar-dropdown-submenu-separator">|</li>
@@ -19,8 +19,8 @@
                     <li><a href="/works/2024">2024</a></li>
                 </ul>
             </li>
-            <li><a href="/profiles">Profile</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="/profiles" class="nav-profiles">Profile</a></li>
+            <li><a href="/contact" class="nav-contact">Contact</a></li>
             <li sec:authorize="isAuthenticated()"><a href="/admin/home-images" style="color: dodgerblue">Admin</a></li>
             <li sec:authorize="isAuthenticated()">
                 <form th:action="@{/logout}" th:method="post">
