--- a/src/main/resources/static/css/reset.css
+++ b/src/main/resources/static/css/reset.css
@@ -34,3 +34,24 @@ i {
 .main-container {
     margin-top: 40px;
 }
+
+.submit-btn {
+    display: inline-block;
+    padding: 8px 20px;
+    height: 21.5px;
+    line-height: 21.5px;
+    box-sizing: content-box;
+    color: var(--accent-color);
+    background-color: var(--background-color);
+    border: 2px solid var(--accent-color);
+    border-radius: 6px;
+    font-weight: 500;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.submit-btn:hover {
+    color: #fff;
+    font-weight: 500;
+    background-color: var(--accent-color);
+}
