--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -7,23 +7,23 @@
   <link rel="stylesheet" href="/css/contact.css" />
 </head>
 <div layout:fragment="content">
-  <form th:action="@{/admin/works}" th:object="${request}" method="post">
+  <form th:action="@{/contact}" th:object="${request}" method="post">
     <div class="contact-container">
       <div>
         <label for="contact-name" class="input-label">Name</label>
-        <input id="contact-name" type="text" class="form-control" placeholder="Name">
+        <input id="contact-name" type="text" class="form-control" placeholder="Name" th:field="*{senderName}">
       </div>
       <div>
         <label for="contact-email" class="input-label">Email</label>
-        <input id="contact-email" type="text" class="form-control" placeholder="Email">
+        <input id="contact-email" type="text" class="form-control" placeholder="Email" th:field="*{senderEmail}">
       </div>
       <div>
         <label for="contact-subject" class="input-label">Subject</label>
-        <input id="contact-subject" type="text" class="form-control" placeholder="Subject">
+        <input id="contact-subject" type="text" class="form-control" placeholder="Subject" th:field="*{subject}">
       </div>
       <div>
         <label for="contact-content" class="input-label">Content</label>
-        <textarea id="contact-content" cols="30" rows="10" class="textarea-control"></textarea>
+        <textarea id="contact-content" cols="30" rows="10" class="textarea-control" th:field="*{content}"></textarea>
       </div>
       <div class="contact-submit-btn-container">
         <button type="submit" class="submit-btn">Send</button>
