--- a/src/main/resources/templates/fragments/admin-navbar.html
+++ b/src/main/resources/templates/fragments/admin-navbar.html
@@ -7,7 +7,7 @@
     <a href="/admin/home-images" class="admin-home-image-btn">Home</a>
     <a href="/admin/works" class="admin-work-btn">Works</a>
     <a href="/admin/profile/all" class="admin-profile-btn">Profile</a>
-    <a href="#none">Contact</a>
+    <a href="/admin/contact" class="admin-contact-btn">Contact</a>
   </div>
   <div class="admin-content">
     <div layout:fragment="admin-content"></div>
