--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -23,7 +23,7 @@
             <li><a href="/contact" class="nav-contact">Contact</a></li>
             <li sec:authorize="isAuthenticated()"><a href="/admin/home-images" style="color: dodgerblue">Admin</a></li>
             <li sec:authorize="isAuthenticated()">
-                <form th:action="@{/logout}" th:method="post">
+                <form th:action="@{/logout}" th:method="post" onsubmit="return logoutHandler()">
                     <button class="logout-btn">Logout</button>
                 </form>
             </li>
